# safe-shm

./: CMakeLists.txt  Dockerfile.test  README.md  package.xml  pyproject.toml
.github/workflows/: ci.yml  debian.yml  pypi.yml  release.yml
bench/: benchmark.cpp  benchmark_competitors.cpp  python_benchmark.py
cmake/: safe-shmConfig.cmake.in  version.cmake
debian/: changelog  control  copyright  libsafe-shm-dev.install  rules
examples/: cyclic_buffer_example.cpp  lifecycle_example.cpp  python_cyclic_buffer.py  python_seqlock.py  seqlock_example.cpp
fuzz/: fuzz_cyclic_buffer.cpp  fuzz_time_series.cpp
include/safe-shm/: config.hpp  cyclic_buffer.hpp  dblbuf_loader.hpp  double_buffer_swapper.hpp  flat_type.hpp  image.hpp  image_shm.hpp  logger.hpp  producer_consumer.hpp  sanitized_key.hpp  seqlock.hpp  shared_memory.hpp  shm_lifecycle.hpp  shm_lock.hpp  shm_stats.hpp  snapshot.hpp  stamped.hpp  storage.hpp  swap_runner.hpp  time_series.hpp
scripts/: bump-version.sh
src/: dblbuf_loader.cpp
src/bindings/: nanobind_image_shm.cpp  nanobind_safe_shm.cpp
test/: cross_language_verify.py  cross_language_writer.cpp  cross_process_test.cpp  cyclic_buffer_test.cpp  double_buffer_swapper_test.cpp  flat_type_test.cpp  image_shm_test.cpp  integration_test.cpp  run_cross_language_test.sh  safe_shm_test.cpp  sanitized_key_test.cpp  seqlock_test.cpp  shared_memory_test.cpp  shm_lifecycle_test.cpp  stamped_test.cpp  swap_runner_test.cpp  time_series_test.cpp
